# kafkacfg

./: .gitignore  CHANGELOG  README.md  pyproject.toml  scrape_kafka_config.py
.github/workflows/: release.yml
data/: 0.10.0.json  0.10.2.json  0.11.0.json  0.7.json  0.8.1.json  2.8.json  3.1.json  3.2.json  3.3.json  3.4.json
kafkacfg/: broker.py  cli.py  config.py  exceptions.py  filter.py  overrides.py  parser.py  recommendation.py  version.py
kafkacfg/data/: 0.10.0.json  0.10.1.json  0.10.2.json  0.11.0.json  0.7.json  0.8.1.json  0.8.2.json  0.8.json  0.9.0.json  1.0.json  1.1.json  2.0.json  2.1.json  2.2.json  2.3.json  2.4.json  2.5.json  2.6.json  2.7.json  2.8.json  3.0.json  3.1.json  3.2.json  3.3.json  3.4.json  3.5.json  3.6.json
kafkacfg/data/kafka/: 0.10.0.json  0.11.0.json  0.7.json  0.8.1.json  0.8.json  1.0.json  1.1.json  2.0.json  2.5.json  3.0.json  3.1.json  3.2.json  3.4.json  3.5.json
kafkacfg/data/librdkafka/: 0.8.0.json  0.8.1.json  0.8.2.json  0.8.3.json  0.8.4.json  0.8.5.json  0.8.6.json  0.9.0.100.json  0.9.0.101.json  0.9.0.99.json  0.9.0.json  0.9.1.json  0.9.2.json  0.9.3.json  0.9.4.json  0.9.5.json  1.0.0.json  1.0.1.json  1.1.0.json  1.2.0.json  1.2.1.json  1.2.2.json  1.3.0.json  1.4.0.json  1.4.2.json  1.4.4.json  1.5.0.json  1.5.2.json  1.5.3.json  1.6.0.json  1.6.1.json  1.6.2.json  1.7.0.json  1.8.0.json  1.8.2.json  1.9.1.json  1.9.2.json  2.0.0.json  2.0.1.json  2.1.1.json  (+2 more)
samples/: librdkafka.properties  producer.properties  server.properties
scripts/: scrape_kafka_config.py  scrape_librdkafka_config.py
