[tool.poetry]
name = "kafkacfg"
version = "0.1.0"
description = "Compare your kafka configuration to the default values for a given kafka version"
authors = ["Balthazar Rouberol <br@imap.cc>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kafkacfg = 'kafkacfg.cli:kafkacfg'
